@@ -34,158 +34,6 @@
 class ToolboxNet extends ZMToolboxNet {
 
     /**
-     * ZenMagick implementation of zen-cart's zen_href_link function.
-     */
-    public function furl($page=null, $params='', $transport='NONSSL', $addSessionId=true, $seo=true, $isStatic=false, $useContext=true) {
-    //TODO:
-    global $session_started, $http_domain, $https_domain;
-
-        $isAdmin = false;
-        if (ZMSettings::get('isAdmin')) {
-            // admin links!
-            $isAdmin = true;
-            //TODO: init!
-            if (empty($page)) {
-                if (!isset($PHP_SELF)) $PHP_SELF = $_SERVER['PHP_SELF'];
-                while (false !== strpos($PHP_SELF, '//')) $PHP_SELF = str_replace('//', '/', $PHP_SELF);
-                $page = $PHP_SELF;
-            } else {
-                $page = DIR_WS_ADMIN . $page;
-            }
-            $useContext = false;
-            $isStatic = true;
-        } else if (empty($page)) {
-            throw new ZMException('missing page parameter');
-        }
-
-        // handle SEO
-        $rewriters = $this->getSeoRewriter();
-        if (!$isAdmin && $seo && 0 < count($rewriters)) {
-            $rewrittenUrl = null;
-            $args = array(
-              'requestId' => $page, 
-              'params' => $params, 
-              'secure' => 'SSL'==$transport, 
-              'addSessionId' => $addSessionId, 
-              'isStatic' => $isStatic, 
-              'useContext' => $useContext
-            );
-            foreach ($rewriters as $rewriter) {
-                if (null != ($rewrittenUrl = $rewriter->rewrite($this->getRequest(), $args))) {
-                    return $rewrittenUrl;
-                 }
-            }
-        }
-
-        // default to non ssl
-        $server = HTTP_SERVER;
-        if ($transport == 'SSL' && ZMSettings::get('isEnableSSL')) {
-            $server = HTTPS_SERVER;
-        }
-
-        $path = '';
-        if ($useContext) {
-            $path = HTTPS_SERVER == $server ? DIR_WS_HTTPS_CATALOG : DIR_WS_CATALOG;
-        }
-
-        // trim '?' and '&' from params
-        while ('?' == ($char = substr($params, 0, 1)) || '&' == $char) $params = substr($params, 1);
-        while ('?' == ($char = substr($params, -1)) || '&' == $char) $params = substr($params, 0, -1);
-
-        $query = '?';
-        if ($isStatic) {
-            $path .= $page;
-        } else {
-            $path .= 'index.php';
-            $query .= ZM_PAGE_KEY . '=' . $page;
-        }
-
-        if (!empty($params)) {
-            $query .= '&'.strtr(trim($params), array('"' => '&quot;'));
-        }
-
-        // trim trailing '?' and '&' from path
-        while ('?' == ($char = substr($path, -1)) || '&' == $char) $path = substr($path, 0, -1);
-
-        // Add the session ID when moving from different HTTP and HTTPS servers, or when SID is defined
-        $sid = null;
-        //TODO:$session = $this->getRequest()->getSession();
-        if ($addSessionId && ($session_started/* || $session->isStarted()*/) && !ZMSettings::get('isForceCookieUse')) {
-            if (defined('SID') && !ZMLangUtils::isEmpty(SID)) {
-                // defined, so use it
-                $sid = SID;
-            } elseif (($transport == 'NONSSL' && HTTPS_SERVER == $server) || ($transport == 'SSL' && HTTP_SERVER == $server)) {
-                // switch from http to https or vice versa
-                if ($http_domain != $https_domain) {
-                    $sid = zen_session_name() . '=' . zen_session_id();
-                }
-            }
-        }
-
-        if (null !== $sid) {
-            $query .= '&' . strtr(trim($sid), array('"' => '&quot;'));
-        }
-
-        while (false !== strpos($path, '//')) $path = str_replace('//', '/', $path);
-        $query = (1 < strlen($query)) ? $query : '';
-
-        return $this->encode($server.$path.$query);
-    }
-
-
-    /**
-     * Create a ZenMagick URL.
-     *
-     * <p>Mother of all other URL related methods in this class.</p>
-     *
-     * <p>If the <code>page</code> parameter is <code>null</code>, the current page/view will be
-     * used. The provided parameter will be merged into the current query string.</p>
-     *
-     * @param string page The page name (ie. the page name as referred to by the parameter <code>ZM_PAGE_KEY</code>)
-     * @param string params Query string style parameter; if <code>null</code> add all current parameter
-     * @param boolean secure Flag indicating whether to create a secure or non secure URL; default is <code>false</code>.
-     * @return string A full URL.
-     */
-    public function url($page=null, $params='', $secure=false) {
-        // custom view and params handling
-        if (null === $page || null === $params) {
-            $query = $this->getRequest()->getParameterMap();
-            unset($query[ZM_PAGE_KEY]);
-            unset($query[zen_session_name()]);
-            if (null != $params) {
-                parse_str($params, $arr);
-                $query = array_merge($query, $arr);
-            }
-            $params = '';
-            foreach ($query as $name => $value) {
-                if (is_array($value)) {
-                    foreach ($value as $subValue) {
-                        $params .= $name.'[]='.$subValue.'&';
-                    }
-                } else {
-                    $params .= $name.'='.$value.'&';
-                }
-            }
-        }
-
-        // default to current view
-        $page = $page === null ? $this->getRequest()->getRequestId() : $page;
-        $href = null;
-        // no SEO in admin
-        // XXX: have separate setting to disable rather than admin (might have to fake that to force regular URLS
-        if (function_exists('zm_build_seo_href') && !ZMSettings::get('isAdmin')) {
-            // use custom SEO builder function - three args only
-            $href = zm_build_seo_href($this->getRequest(), $page, $params, $secure);
-        } else {
-            // use default implementation - three args only
-            $href = $this->furl($page, $params, $secure ? 'SSL' : 'NONSSL');
-        }
-
-        return $href;
-    }
-
-
-    /**
      * Convenience function to build a product URL.
      *
      * <p>Please note that in <em>ZenMagick</em> all product URLs use the same
