@@ -57,8 +57,8 @@ if (!function_exists('zen_href_link')) {
      * zen_href_link wrapper that delegates to the Zenmagick implementation.
      */
     function zen_href_link($page='', $params='', $transport='NONSSL', $addSessionId=true, $seo=true, $isStatic=false, $useContext=true) {
-        if (class_exists('ZMToolbox')) {
-            return ZMRequest::instance()->getToolbox()->net->furl($page, $params, $transport, $addSessionId, $seo, $isStatic, $useContext);
+        if (class_exists('ZMStoreDefaultSeoRewriter')) {
+            return ZMStoreDefaultSeoRewriter::furl($page, $params, $transport, $addSessionId, $seo, $isStatic, $useContext);
         } else if (function_exists('zen_href_link_DISABLED')) {
             // just in case...
             return zen_href_link_DISABLED($page, $params, $transport, $addSessionId, $seo, $isStatic, $useContext);
