@@ -165,6 +165,8 @@ Release 0.9.9
 - pageStats: add loader object instatiation to stats
 - full-release: add all stuff that gets removed from zc-base as zip to
   zc_install/optional
+- move ZMToolboxNet::url() to ZMRequest
+- actually use ZMStoreDefaultSeoRewriter
 
 Release 0.9.8
 - add Savant3 and experimental views (not used yet)
